# pcblarp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  inspector.json  package-lock.json  package.json  pyproject.toml  render.yaml  vite.config.js
airbyte/: destination_postgres.json
backend/: .env.example  README.md  main.py  pyproject.toml
backend/airbyte/: README.md  connection_parts.json  source_lcsc_csv.json
backend/app/: kicad_generator.py  models.py  nebius_client.py  pcb_renderer.py  router.py
backend/chatpcb/: app.py  config.py  llm.py  models.py  worker.py
backend/data/: mock_spec.json  parts.csv
backend/docker/: worker.Dockerfile
backend/docs/: pcbway_capabilities.md
backend/frontend/: index.html
backend/tests/: conftest.py  test_app.py  test_integrations.py  test_models.py  test_parts.py  test_pipeline.py
chatpcb/: __init__.py  app.py  cli.py  config.py  llm.py  models.py  pipeline.py  telemetry.py
chatpcb/eda/: blocks.py  board_gen.py  gerber.py  library.py  schematic_gen.py
chatpcb/integrations/: airbyte_lcsc.py  guild_tracking.py
chatpcb/stages/: __init__.py  (+5 more)
data/: mock_spec.json
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json
pcblarp/: .env.example
prompts/: stage1_spec.md
scripts/: fetch_kicad_library.py
server/: index.js
shared/: schema.ts
src/: App 2.jsx  App.css  App.jsx  Dashboard.css  Dashboard.jsx  index.css  main.jsx
tests/: conftest.py  test_eda.py  test_integrations.py  test_llm.py  test_models.py  test_pipeline.py  test_spec_stage.py  test_worker.py
(+76 files in other folders)
